# sfml-basicApp

./: CMakeLists.txt  main.cpp
